@@ -1,3 +1,5 @@
+- Bug fix: add grade entries to RAIDES mappings 
+
 2.15.6 (08-02-2023)
 - Bug fix: RAIDES logs
 - Refactor: Make compatible with latest version of academic-core
